# pangloss2

./: .gitignore  pyproject.toml  test.py
docs/: ModelTypes.md
pangloss/: __init__.py  exceptions.py  models.py  types.py
pangloss/model_setup/: field_definitions.py  initialise_meta.py  model_manager.py
pangloss/model_setup/model_bases/: base_object.py  configs.py  conjunction.py  document.py  edge_model.py  embedded.py  entity.py  helpers.py  meta.py  reified_relation.py  relation.py  semantic_space.py  sub_document.py  trait.py
tests/test_models/: conftest.py  models.py  test_field_definitions.py  test_initialise_meta.py  test_meta.py  test_model_manager.py
tests/test_models/test_build_model_fields/: test_build_model_fields_for_documents.py
