[project]
name = "pangloss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Richard Hadden", email = "richard.hadden@oeaw.ac.at" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-meta-kit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.workspace]
members = [
    "pangloss/pydantic_meta_kit",
]

[tool.uv.sources]
pydantic-meta-kit = { git = "https://github.com/richardhadden/pydantic-meta-kit.git" }
